# fdc-baza-platform

./: .dockerignore  .env.example  .env.test  .git-commit-template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
src/config/: base.py
src/tests/: __init__.py
