[project]
name = "fdc-baza-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "advanced-alchemy>=1.1.1",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "granian>=2.2.3",
    "litestar>=2.15.2",
    "litestar-asyncpg>=0.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.5",
    "sqlalchemy>=2.0.40",
]
